fix(slider): change alignment styles

--- a/packages/elemental-theme/src/custom-elements/ef-slider-marker.less
+++ b/packages/elemental-theme/src/custom-elements/ef-slider-marker.less
@@ -9,10 +9,10 @@
 
   [part='label'] {
     top: 15px;
-    transform: translateX(calc(-50% + @slider-step-width / 2));
+    transform: translateX(calc(-50% + @slider-step-width));
   }
   &[label-align='right'] [part='label'] {
-    transform: translateX(calc(-95% + @slider-step-width / 2));
+    transform: translateX(calc(-100% + @slider-step-width));
   }
   &[label-align='left'] [part='label'] {
     transform: none;
